--- a/server/package.json
+++ b/server/package.json
@@ -15,19 +15,28 @@
    "license": "ISC",
    "packageManager": "pnpm@10.12.1",
    "dependencies": {
+      "@prisma/client": "6.10.1",
+      "argon2": "^0.43.0",
+      "cors": "^2.8.5",
       "dotenv": "^16.5.0",
       "express": "^5.1.0",
-      "morgan": "^1.10.0"
+      "jsonwebtoken": "^9.0.2",
+      "morgan": "^1.10.0",
+      "socket.io": "^4.8.1"
    },
    "devDependencies": {
       "@eslint/js": "^9.29.0",
+      "@types/cors": "^2.8.19",
       "@types/express": "^5.0.3",
+      "@types/morgan": "^1.9.10",
       "@types/node": "^24.0.3",
       "eslint": "^9.29.0",
       "eslint-config-prettier": "^10.1.5",
+      "eslint-plugin-prettier": "^5.5.0",
       "globals": "^16.2.0",
       "nodemon": "^3.1.10",
       "prettier": "3.5.3",
+      "prisma": "^6.10.1",
       "ts-node": "^10.9.2",
       "typescript": "^5.8.3",
       "typescript-eslint": "^8.34.1"
