--- a/server/.env.example
+++ b/server/.env.example
@@ -7,3 +7,7 @@ NODE_ENV="development"
 FRONTEND_URL="http://localhost:5173"
 
 DATABASE_URL=""
+
+# JWT
+JWT_SECRET="5efdddd8-b62b-4bbb-96e7-5c19b0b0e300"
+JWT_EXPIRE_IN="1d"
