--- a/server/package.json
+++ b/server/package.json
@@ -22,13 +22,17 @@
       "express": "^5.1.0",
       "jsonwebtoken": "^9.0.2",
       "morgan": "^1.10.0",
-      "socket.io": "^4.8.1"
+      "ms": "^2.1.3",
+      "socket.io": "^4.8.1",
+      "zod": "^3.25.67"
    },
    "devDependencies": {
       "@eslint/js": "^9.29.0",
       "@types/cors": "^2.8.19",
       "@types/express": "^5.0.3",
+      "@types/jsonwebtoken": "^9.0.10",
       "@types/morgan": "^1.9.10",
+      "@types/ms": "^2.1.0",
       "@types/node": "^24.0.3",
       "eslint": "^9.29.0",
       "eslint-config-prettier": "^10.1.5",
