--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
       "jsonwebtoken": "^9.0.2",
       "morgan": "^1.10.0",
       "ms": "^2.1.3",
+      "multer": "^2.0.1",
       "socket.io": "^4.8.1",
       "zod": "^3.25.67"
    },
@@ -33,6 +34,7 @@
       "@types/jsonwebtoken": "^9.0.10",
       "@types/morgan": "^1.9.10",
       "@types/ms": "^2.1.0",
+      "@types/multer": "^1.4.13",
       "@types/node": "^24.0.3",
       "eslint": "^9.29.0",
       "eslint-config-prettier": "^10.1.5",
