--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
    "name": "server",
    "version": "1.0.0",
    "description": "",
-   "main": "index.js",
+   "main": "dist/index.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start:dev": "nodemon src/index.ts",
+      "start:dev": "nodemon --require tsconfig-paths/register src/index.ts",
       "start": "node dist/index.js",
       "build": "tsc -p tsconfig.json",
       "format": "pnpm exec prettier . --write"
@@ -44,6 +44,7 @@
       "prettier": "3.5.3",
       "prisma": "^6.10.1",
       "ts-node": "^10.9.2",
+      "tsconfig-paths": "^4.2.0",
       "typescript": "^5.8.3",
       "typescript-eslint": "^8.34.1"
    }
