--- a/server/.env.example
+++ b/server/.env.example
@@ -4,6 +4,8 @@ PORT=3030
 # `develpment` or `production`
 NODE_ENV="development"
 
+# Sites
+BACKEND_URL="http://localhost:3030"
 FRONTEND_URL="http://localhost:5173"
 
 DATABASE_URL=""
