Update ts config

--- a/server/package.json
+++ b/server/package.json
@@ -3,18 +3,25 @@
    "version": "1.0.0",
    "description": "",
    "main": "dist/index.js",
-   "type": "module",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start:dev": "nodemon --require tsconfig-paths/register src/index.ts",
+      "start:dev": "tsx --watch src/index.ts",
       "start": "node dist/index.js",
-      "build": "tsc -p tsconfig.json",
+      "build": "tsc -p tsconfig.json && tsc-alias",
+      "build:minify": "tsc -p tsconfig.json && tsc-alias && esbuild dist/index.js --bundle --minify --platform=node --outfile=dist/index.min.js",
+      "typecheck": "tsc --noEmit",
+      "lint": "eslint .",
+      "lint:fix": "eslint --fix .",
+      "format:check": "prettier --check .",
       "format": "pnpm exec prettier . --write"
    },
    "keywords": [],
    "author": "",
    "license": "ISC",
    "packageManager": "pnpm@10.12.1",
+   "engines": {
+      "node": ">=22.0.0"
+   },
    "dependencies": {
       "@prisma/client": "6.10.1",
       "argon2": "^0.43.0",
@@ -30,6 +37,7 @@
    },
    "devDependencies": {
       "@eslint/js": "^9.29.0",
+      "@tsconfig/node22": "^22.0.2",
       "@types/cors": "^2.8.19",
       "@types/express": "^5.0.3",
       "@types/jsonwebtoken": "^9.0.10",
@@ -37,15 +45,15 @@
       "@types/ms": "^2.1.0",
       "@types/multer": "^1.4.13",
       "@types/node": "^24.0.3",
+      "esbuild": "^0.25.5",
       "eslint": "^9.29.0",
       "eslint-config-prettier": "^10.1.5",
       "eslint-plugin-prettier": "^5.5.0",
       "globals": "^16.2.0",
-      "nodemon": "^3.1.10",
       "prettier": "3.5.3",
       "prisma": "^6.10.1",
-      "ts-node": "^10.9.2",
-      "tsconfig-paths": "^4.2.0",
+      "tsc-alias": "^1.8.16",
+      "tsx": "^4.20.3",
       "typescript": "^5.8.3",
       "typescript-eslint": "^8.34.1"
    }
